feat: inherit feature annotation and make FeatureConditionVersion class-level