@@ -17,7 +17,6 @@ import ovh.mythmc.gestalt.annotations.status.FeatureInitialize;
 import ovh.mythmc.gestalt.annotations.status.FeatureShutdown;
 import ovh.mythmc.gestalt.exceptions.AlreadyInitializedException;
 import ovh.mythmc.gestalt.exceptions.NotInitializedException;
-import ovh.mythmc.gestalt.features.FeatureConstructorParams;
 import ovh.mythmc.gestalt.features.FeatureConstructorParamsRegistry;
 import ovh.mythmc.gestalt.features.FeaturePriority;
 import ovh.mythmc.gestalt.features.GestaltFeature;
@@ -64,24 +63,19 @@ public class Gestalt {
         return gestalt;
     }
 
-    private final Map<Class<?>, Boolean> classMap = new HashMap<>();
+    private final Map<String, Boolean> classMap = new HashMap<>();
 
     public void register(final @NotNull Class<?>... classes) {
         Arrays.stream(classes).forEach(clazz -> {
+            if (classMap.containsKey(clazz.getName()))
+                return;
+
             if (!clazz.isAnnotationPresent(Feature.class))
                 return;
 
-            if (classMap.containsKey(clazz))
-                return;
-
             MethodUtil.triggerAnnotatedMethod(clazz, FeatureInitialize.class);
-            classMap.put(clazz, false);
+            classMap.put(clazz.getName(), false);
         });
-    }
-
-    public void register(final @NotNull Class<?> clazz, final @NotNull FeatureConstructorParams params) {
-        getParamsRegistry().register(clazz, params);
-        register(clazz);
     }
 
     public void register(final @NotNull GestaltFeature feature) {
@@ -93,36 +87,48 @@ public class Gestalt {
     }
 
     public void unregister(final @NotNull Class<?>... classes) {
-        Arrays.stream(classes).forEach(clazz -> {
-            if (!classMap.containsKey(clazz))
+        unregister((String[]) Arrays.stream(classes).map(clazz -> clazz.getName()).toArray());
+    }
+
+    public void unregister(final @NotNull String... classes) {
+        Arrays.stream(classes).forEach(className -> {
+            if (!classMap.containsKey(className))
                 return;
 
-            MethodUtil.triggerAnnotatedMethod(clazz, FeatureShutdown.class);
-            classMap.remove(clazz);
-            getParamsRegistry().unregister(clazz);
+            MethodUtil.triggerAnnotatedMethod(getFeatureClass(className), FeatureShutdown.class);
+            classMap.remove(className);
+            getParamsRegistry().unregister(className);
         });
     }
 
     public void unregisterAllFeatures() {
         for (int i = 0; i < classMap.keySet().size(); i++) {
-            Class<?> clazz = classMap.keySet().stream().toList().get(i);
+            Class<?> clazz = getFeatureClass(classMap.keySet().stream().toList().get(i));
             unregister(clazz);
         }
     }
 
+    private Class<?> getFeatureClass(final @NotNull String className) {
+        try {
+            return Class.forName(className);
+        } catch (ClassNotFoundException ignored) { }
+        
+        return null;
+    }
+
     public void enableFeature(final @NotNull Class<?> clazz) {
-        if (classMap.get(clazz))
+        if (classMap.get(clazz.getName()))
             return;
 
         if (FeatureConditionProcessor.canBeEnabled(clazz)) {
-            classMap.put(clazz, true);
+            classMap.put(clazz.getName(), true);
             MethodUtil.triggerAnnotatedMethod(clazz, FeatureEnable.class);
         }
     }
 
     public void disableFeature(final @NotNull Class<?> clazz) {
-        if (classMap.get(clazz)) {
-            classMap.put(clazz, false);
+        if (classMap.get(clazz.getName())) {
+            classMap.put(clazz.getName(), false);
             MethodUtil.triggerAnnotatedMethod(clazz, FeatureDisable.class);
         }
     }
@@ -131,45 +137,44 @@ public class Gestalt {
         getSortedByPriority().forEach(this::enableFeature);
     }
 
-    public void enableAllFeatures(final @NotNull String key) {
-        getSortedByPriority().stream().filter(clazz -> clazz.getAnnotation(Feature.class).key().equals(key)).forEach(this::enableFeature);
+    public void enableAllFeatures(final @NotNull String group) {
+        getSortedByPriority().stream().filter(clazz -> clazz.getAnnotation(Feature.class).group().equals(group)).forEach(this::enableFeature);
     }
 
     public void disableAllFeatures() {
         getSortedByPriority().forEach(this::disableFeature);
     }
 
-    public void disableAllFeatures(final @NotNull String key) {
-        getSortedByPriority().stream().filter(clazz -> clazz.getAnnotation(Feature.class).key().equals(key)).forEach(this::disableFeature);
+    public void disableAllFeatures(final @NotNull String group) {
+        getSortedByPriority().stream().filter(clazz -> clazz.getAnnotation(Feature.class).group().equals(group)).forEach(this::disableFeature);
     }
 
-    public List<Class<?>> getByKey(final @NotNull String key) {
+    public List<Class<?>> getByGroup(final @NotNull String group) {
         return classMap.keySet().stream()
-            .filter(clazz -> clazz.getAnnotation(Feature.class).key().equals(key))
-            .toList();
+            .map(className -> getFeatureClass(className))
+            .filter(clazz -> clazz.getAnnotation(Feature.class).group().equals(group))
+            .collect(Collectors.toList());
     }
 
-    public List<Class<?>> getByType(final @NotNull String type) {
+    public List<Class<?>> getByIdentifier(final @NotNull String identifier) {
         return classMap.keySet().stream()
-            .filter(clazz -> clazz.getAnnotation(Feature.class).type().equals(type))
-            .toList();
+            .map(className -> getFeatureClass(className))
+            .filter(clazz -> clazz.getAnnotation(Feature.class).identifier().equals(identifier))
+            .collect(Collectors.toList());
     }
 
     public List<Class<?>> getByPriority(final @NotNull FeaturePriority priority) {
         return classMap.keySet().stream()
+            .map(className -> getFeatureClass(className))
             .filter(clazz -> clazz.getAnnotation(Feature.class).priority().equals(priority))
+            .collect(Collectors.toList());
+    }
+
+    public List<Class<?>> getByGroupAndIdentifier(final @NotNull String group, final @NotNull String identifier) {
+        return getSortedByPriority().stream()   
+            .filter(clazz -> clazz.getAnnotation(Feature.class).group().equals(group) && 
+                clazz.getAnnotation(Feature.class).identifier().equals(identifier))
             .toList();
-    }
-
-    public List<Class<?>> getByKeyAndType(final @NotNull String key, final @NotNull String type) {
-        return getSortedByPriority().stream().filter(clazz -> clazz.getAnnotation(Feature.class).type().equals(type)).toList();
-    }
-
-    public Class<?> getBySimpleClassName(final @NotNull String className) {
-        return classMap.keySet().stream()
-            .filter(clazz -> clazz.getSimpleName().equals(className))
-            .toList()
-            .get(0);
     }
 
     public List<Class<?>> getSortedByPriority() {
@@ -183,15 +188,15 @@ public class Gestalt {
     }
 
     public List<Class<?>> getEnabledClasses() {
-        return classMap.entrySet().stream().filter(entry -> entry.getValue()).map(entry -> entry.getKey()).collect(Collectors.toList());
+        return classMap.entrySet().stream().filter(entry -> entry.getValue()).map(entry -> getFeatureClass(entry.getKey())).collect(Collectors.toList());
     }
 
     public List<Class<?>> getDisabledClasses() {
-        return classMap.entrySet().stream().filter(entry -> !entry.getValue()).map(entry -> entry.getKey()).collect(Collectors.toList());
+        return classMap.entrySet().stream().filter(entry -> !entry.getValue()).map(entry -> getFeatureClass(entry.getKey())).collect(Collectors.toList());
     }
 
     public boolean isEnabled(final @NotNull Class<?> clazz) {
-        return classMap.get(clazz);
+        return classMap.get(clazz.getName());
     }
 
 }
